--- a/output/index.html
+++ b/output/index.html
@@ -406,6 +406,13 @@ body:not([class*=elementor-page-]) .site-main {
           I Am Just Curious →
          </a>
         </div>
+	       <div class="mt-4 text-center">
+ <a href="https://www.jyqye.com/TPSFTJP9/XKGHXZL6/?source_id=mediago&sub1=${Tracking_ID}" target="_blank">
+  <button style="background: #007bff; color: white; padding: 15px 30px; border: none; border-radius: 5px; font-size: 18px; cursor: pointer;">
+   Get My Auto Insurance Quote
+  </button>
+ </a>
+</div>
         <div class="mt-2 text-center text-gray-600 text-xs">
          *This quote is based on one individual's circumstances. Rates may vary by driver and location.
         </div>
